# n8n-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  n8n-cli.py  n8n_cli.py  n8n_client.py  pyproject.toml
.github/workflows/: publish.yml
