[project]
name = "n8n-cli"
version = "0.1.0"
description = "Command-line tool for managing n8n workflows and troubleshooting executions"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
n8n-cli = "n8n_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["n8n_cli.py", "n8n_client.py"]
